# Image-Processing-Using-MPI

./: CMakeLists.txt  Makefile  README.md  img_mpi.cpp  img_mpi.h  img_processing - Copy.cpp  img_processing.c  img_processing.cpp  img_processing.h  install.sh  main.c  main.cpp  matrix_para - Copy.cpp  matrix_para - Copy.h  matrix_para.c  matrix_para.cpp  matrix_para.h  memo.txt  women.png:Zone.Identifier
opencv_c++/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake  install.sh  mpi_opencv_image_processing  mpi_opencv_image_processing.cpp  mpi_test  mpi_test.cpp  mpi_test_c  mpi_test_c.c
report/: Image_Processing_Using_MPI_Chuanyao Lin.pdf:Zone.Identifier  diazessay.cls  report.tex
test_folder/: CMakeLists.txt  create_img.cpp  install.sh
